--- a/Latex/descriptive.tex
+++ b/Latex/descriptive.tex
@@ -1,13 +1,4 @@
-\documentclass{article}
-\usepackage{graphicx}
-\usepackage{pgffor}
-\usepackage{pdfpages}
-\usepackage{geometry}
-\geometry{margin=0pt} % quita márgenes
-\usepackage{float}
-
-
-\begin{document}
+\section{Descriptive Statistics}
 
 \foreach \i in {1,...,35}{%
     \clearpage
@@ -15,12 +6,11 @@
       \edef\FileName{Imatges/d\i.png}%
       \begin{figure}[H]
         \centering
-        \includegraphics[width=0.9\linewidth]{\FileName}
+        \includegraphics[width=1.0\linewidth]{\FileName}
       \end{figure}
     \endgroup
 }
 
-\paragraph{{Final data description}}
+\subsection{Final Data Description}
 The iFood dataset includes 2,031 customers across nine variables, showing no missing data and excellent quality. Customers are predominantly middle-aged and well-educated, with a wide but reasonable income range (mean €52,844). Family structures are typically small, and complaints are extremely rare (0.98\%). Income relates positively to education and age but negatively to having children, while higher-income, recently active customers respond more to marketing campaigns. Overall, the data are well-behaved, balanced across variables, and suitable for multivariate modeling, with only one extreme income outlier and an imbalanced “Complain” variable as minor considerations.
 
-\end{document}
