--- a/Latex/profiling.tex
+++ b/Latex/profiling.tex
@@ -17,7 +17,6 @@ Recall: the Education variable describes the level of studies the consumer has (
 \newline
 With a mean barplot we can see the total expent depending on the level of studies, where it is evident that the basic education group spends much less money on their purchase.
 
-
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.8\linewidth]{Imatges/prop_cond_class_MaritalSts_4_legend.png}
@@ -42,9 +41,42 @@ Comparing the income segment we can see that the basic level has the highest fre
 \end{figure}
 \newline
 About their most purchased product category, we can see that as the level of education increases, there is a tendency to spend more on wine, the customers with lower education levels prefer to buy gold, and those with a graduation level education tend to spend on meat.
+
 \subsection{MaritalSts}
 Variable Type: Categorical Nominal.\newline
 Recall: the MaritalSts variable describes the marital status of the customer (Divorced, Married, Single, Together, Widow).
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\linewidth]{Imatges/mean_barplot_TotalExp(2).png}
+    \caption{Descripció}
+    \label{fig:scree_plot}
+\end{figure}
+\newline
+With a mean barplot we can see that the total expenditure by marital status is quite uniform, despite widow customers that spends more on average.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\linewidth]{Imatges/stacked_barplot_counts_PreferredProductCategory_10_legend.png}
+    \caption{Descripció}
+    \label{fig:scree_plot}
+\end{figure}
+\newline
+It is interesting to observe that regardless of marital status, the main product is wine, followed by meat.
+
+\subsection{IncomeSegment}
+Variable Type: Numerical Discrete.\newline
+Recall: ...
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\linewidth]{Imatges/prop_cond_col_var_x_PreferredProductCategory_8_legend.png}
+    \caption{Descripció}
+    \label{fig:scree_plot}
+\end{figure}
+\newline
+With this graph, it can be observed that the preferred category of customers varies depending on their segment. This shows how different their main interests are when it comes to spending their income.
+
 \subsection{Kidhome}
 Variable Type: Numerical Discrete.\newline
 Recall: the Kidhome variable describes the number of small children in the customer's household (0 - 5).
